--- a/display/index.html
+++ b/display/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="styleSheet" href="./style.css">
 </head>
+
 <body>
-    <div id="todo-item">
-        
+    <div id="todo-list">
+
     </div>
     <script src="./app.js"></script>
 </body>
+
 </html>
